--- a/index/develop.html
+++ b/index/develop.html
@@ -31,10 +31,14 @@
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
-				<h5 class="alert-heading">网站数据_v0.6_20231007</h5>
+				<h5 class="alert-heading">网站数据_v0.6_20231018</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.8<span class="badge badge-danger">New</span></h4>
-				<h5 class="float-end">2023-10-12</h5>
+				<h4 class="alert-heading">BETA 3.5.9<span class="badge badge-danger">New</span></h4>
+				<h5 class="float-end">2023-10-18</h5>
+				<p>1：more页面增加搜索框跳转选项，可以指定网站的搜索和局域网的跳转</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.8</h5>
+				<h6 class="float-end">2023-10-12</h6>
 				<p>1：more页面增加搜索框</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.7</h5>
@@ -126,12 +130,8 @@
 				<p>1：升级主框架boostrap-v4.</p>
 				<p>2：将页面导航栏更改为新算法以提供网页加载速度。</p>
 			</div>
-			<div class="alert alert-info shadow" role="alert">旧站点版本 2.4 --> 
-				<a href="https://xiaolanqqai.github.io/" class="badge badge-light">网址</a>
-			</div>
-			<div class="alert alert-info shadow" role="alert">旧站点版本 1.0 --> 
-				<a href="https://xiaolanqqai.github.io/" class="badge badge-light">网址</a>
-			</div>
+			<div class="alert alert-info shadow" role="alert">旧站点版本 2.4 --><a href="https://xiaolanqqai.github.io/" class="badge badge-light">网址</a></div>
+			<div class="alert alert-info shadow" role="alert">旧站点版本 1.0 --><a href="https://xiaolanqqai.github.io/" class="badge badge-light">网址</a></div>
 			<div class="alert alert-secondary shadow" role="alert">此网站基于 ---</div>
 			<div class="d-flex flex-wrap p-2" id="ar1"></div>
 		</div>
@@ -167,7 +167,7 @@
 		});
 	</script>
 	
-	<div id="uptime2" style="display: none;">20230918</div>
+	<div id="uptime2" style="display: none;">20231018</div>
 
 	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 			
