--- a/index/more.html
+++ b/index/more.html
@@ -28,9 +28,14 @@
 		</div>
 		<div class="d-flex flex-column">
 			<div class="mt-3 mx-3" id="more-b" style="display: none;">
-				<button onclick="a1()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">bilibili</h6></button>
-				<button onclick="a2()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">bing</h6></button>
-				<button onclick="a3()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">google.hk</h6></button>
+				<button onclick="a6()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.1.</h6></button>
+				<button onclick="a7()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.2.</h6></button>
+				<button onclick="a0()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="t1">Baidu</h6></button>
+				<button onclick="a1()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">BiliBili</h6></button>
+				<button onclick="a2()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">Bing</h6></button>
+				<button onclick="a3()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">Google.hk</h6></button>
+				<button onclick="a4()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="t1">Yandex</h6></button>
+				<button onclick="a5()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="t1">快递100</h6></button>
 			</div>
 		</div>
 
@@ -47,21 +52,38 @@
 					oMoreC.style.display = "none";
 				};
 			};
+			function a0 (){
+				oMoreS.innerHTML = "Baidu";
+				oMoreB = 0;
+			};
 			function a1 (){
-				oMoreS.innerHTML = "bilibili";
+				oMoreS.innerHTML = "BiliBili";
 				oMoreB = 1;
-				oMoreC.style.display = "none";
-			}
+			};
 			function a2 (){
-				oMoreS.innerHTML = "bing";
+				oMoreS.innerHTML = "Bing";
 				oMoreB = 2;
-				oMoreC.style.display = "none";
-			}
+			};
 			function a3 (){
-				oMoreS.innerHTML = "google";
+				oMoreS.innerHTML = "Google";
 				oMoreB = 3;
-				oMoreC.style.display = "none";
-			}
+			};
+			function a4 (){
+				oMoreS.innerHTML = "Yandex";
+				oMoreB = 4;
+			};
+			function a5 (){
+				oMoreS.innerHTML = "快递100";
+				oMoreB = 5;
+			};
+			function a6 (){
+				oMoreS.innerHTML = ".1.";
+				oMoreB = 6;
+			};
+			function a7 (){
+				oMoreS.innerHTML = ".2.";
+				oMoreB = 7;
+			};
 
 			oBtn.onclick = function () {
 				var oValue = oTxt.value;
@@ -71,11 +93,19 @@
 				}else if (oMoreB == 0) {
 					window.open("https://www.baidu.com/s?wd=" + oValue);
 				}else if (oMoreB == 1) {
-					window.open("https://search.bilibili.com/all?keyword=" + oValue + "&from_source=webtop_search&spm_id_from=333.937");
+					window.open("https://search.bilibili.com/all?keyword=" + oValue);
 				}else if (oMoreB == 2) {
 					window.open("https://www.bing.com/search?q=" + oValue);
 				}else if (oMoreB == 3) {
 					window.open("https://www.google.com.hk/search?q=" + oValue);
+				}else if (oMoreB == 4) {
+					window.open("https://yandex.com/search/?text=" + oValue);
+				}else if (oMoreB == 5) {
+					window.open("https://www.kuaidi100.com/chaxun?com=&nu=" + oValue);
+				}else if (oMoreB == 6) {
+					window.open("http://192.168.1." + oValue);
+				}else if (oMoreB == 7) {
+					window.open("http://192.168.2." + oValue);
 				};
 			};
 		</script>
@@ -122,7 +152,7 @@
 
 	<!--背景-->
 
-	<div id="uptime2" style="display: none;">20230918</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20231018</div><!-- 最后更新时间 -->
 
 	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 
