--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 	<div class="z-2 d-flex flex-column justify-content-center mx-auto">
 		<div class=" mt-5 pt-5 d-none d-sm-block"></div>
-		<div class="mx-auto shadow mt-3"><a href="index.html"><img src="img/google_logo.webp" width="250" class="img-fluid img-thumbnail"></a></div>
+		<div class="mx-auto shadow mt-3"><img width="250" src="img/google_logo.webp" class="img-fluid img-thumbnail"></div>
+		
 		<div class="mx-auto mt-5 pt-5">
 			<!--搜索框-->
 			<form onsubmit="submitFn(this, event);">
@@ -96,7 +97,6 @@
 	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 
 	<script src="js/foot.js"></script>
-
 	<script>
 		//剪贴板内容跳转百度搜索
 		function getClipboardText() {
