--- a/index/dd.html
+++ b/index/dd.html
@@ -20,7 +20,7 @@
 			<button onclick="window.location.href = 'more.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
 			<form class="more-tag d-flex mx-3" role="search">
 				<input id="txt" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-				<button id="btn" class="btn btn-outline-success" type="submit">Search</button>
+				<button id="btn" class="btn btn-outline-success" type="button">Search</button>
 			</form>
 			<script type="text/javascript">
 				var oTxt = document.getElementById("txt");
