--- a/index/develop.html
+++ b/index/develop.html
@@ -31,10 +31,18 @@
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
-				<h5 class="alert-heading">网站数据_v0.6_20231018</h5>
+				<h5 class="alert-heading">网站数据_v0.6_20231025</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.9<span class="badge badge-danger">New</span></h4>
-				<h5 class="float-end">2023-10-18</h5>
+				<h4 class="alert-heading">BETA 3.6.0<span class="badge badge-danger">New</span></h4>
+				<h5 class="float-end">2023-10-25</h5>
+				<p>1：更改aa的跳转方式，集成在搜索框</p>
+				<p>2：增加more的搜索框指向缓存为localStorage</p>
+				<p>3：优化more的搜索样式</p>
+				<p>4：增加more搜索框指向的缓存检测</p>
+				<p>5：增加index搜索框指向,初步指向more的搜索选项</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.9</h5>
+				<h6 class="float-end">2023-10-18</h6>
 				<p>1：more页面增加搜索框跳转选项，可以指定网站的搜索和局域网的跳转</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.8</h5>
