--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<div class="z-2 d-flex flex-column justify-content-center mx-auto">
 		<div class=" mt-5 pt-5 d-none d-sm-block"></div>
-		<div class="mx-auto shadow mt-3 rounded-4"><img id="indexing" width="250" src="img/login.png" class="p-1"></div>
+		<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1"></div>
 		
 		<div class="mx-auto mt-5 pt-5">
 			<!--搜索框-->
@@ -42,7 +42,7 @@
 		</div>
 
 		<nav class="p-2 mx-auto mt-5 pt-5">
-			<div class="nav nav-tabs shadow">
+			<div class="nav nav-tabs shadow rounded-2">
 				<a class="nav-link btn nav-top active">Home</a>
 				<a class="nav-link btn nav-top">Tools</a>
 				<a class="nav-link btn nav-top">Tools NEW</a>
@@ -84,12 +84,6 @@
 	</div>
 	<script src="js/particles.min.js"></script>
 
-	<script>
-		$('img').on("error", function () {
-			$(this).attr('src', 'img/index.png');  // 替换为默认图片
-		});
-	</script>
-
 	<!--背景-->
 
 	<div id="uptime2" style="display: none;">20231018</div><!-- 最后更新时间 -->
@@ -97,44 +91,7 @@
 	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 
 	<script src="js/foot.js"></script>
-	<script>
-		var indexing = document.getElementById("indexing");
-		if(oMoreB == 0){
-			indexing.setAttribute("src", "img/1.jpg");
-		}else if(oMoreB == 1){
-			indexing.setAttribute("src", "img/1.jpg");
-		}else if(oMoreB == 2){
-			indexing.setAttribute("src", "img/baidu.gif");
-		}else if(oMoreB == 3){
-			indexing.setAttribute("src", "img/bilibili.png");
-		}else if(oMoreB == 4){
-			indexing.setAttribute("src", "img/bing.jpg");
-		}else if(oMoreB == 5){
-			indexing.setAttribute("src", "img/google.webp");
-		}else if(oMoreB == 6){
-			indexing.setAttribute("src", "img/yandex.jpg");
-		}else if(oMoreB == 7){
-			indexing.setAttribute("src", "img/kd100.png");
-		}
-	</script>
-	<script>
-		//剪贴板内容跳转百度搜索
-		function getClipboardText() {
-			return new Promise((resolve, reject) => {
-				navigator.clipboard.readText().then(text => {
-					resolve(text);
-				}).catch(err => {
-					reject(err);
-				});
-			});
-		}
-
-		getClipboardText().then(text => {
-			window.open("https://www.baidu.com/s?word=" + text, "_self");
-		}).catch(err => {
-			console.error('获取剪贴板文本失败：', err);
-		});
-	</script>
+	<script src="js/foot_index.js"></script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
 
