--- a/index/more.html
+++ b/index/more.html
@@ -86,6 +86,7 @@
 	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 
 	<script src="../js/foot.js"></script>
+	<script src="../js/foot_more.js"></script>
 
 	<script>mots()</script><!-- 头部搜索指向记忆加载 -->
 
