--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="favicon.ico" loading="lazy">
-	<script type="text/javascript" src="js/data.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/search-form.css">
@@ -72,6 +71,7 @@
 
 	</div>
 
+	<script src="js/data.js"></script>
 	<script>datat()</script><!-- 网站列表数据请求 -->
 
 	<!--背景-->
@@ -92,6 +92,8 @@
 
 	<script src="js/foot.js"></script>
 	<script src="js/foot_index.js"></script>
+
+	<script src="file:///C:/demo/js/ddd.js"></script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
 
