--- a/index/dd.html
+++ b/index/dd.html
@@ -6,32 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
-	<script type="text/javascript" src="../js/data.js"></script>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 
 <body>
-
-	<div class="z-2 d-flex flex-column mx-auto">
-		<div class="d-flex flex-row">
-			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
-			<button onclick="window.location.href = 'more.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
-			<form class="more-tag d-flex mx-3" role="search">
-				<input id="txt" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-				<button id="btn" class="btn btn-outline-success" type="button">Search</button>
-			</form>
-			<script type="text/javascript">
-				var oTxt = document.getElementById("txt");
-				var oBtn = document.getElementById("btn");
-				oBtn.onclick = function () {
-					var oValue = oTxt.value;
-					window.open("https://www.baidu.com/s?wd=" + oValue);
-				};
-			</script>
-		</div>
-
+	<div class="z-3 d-flex flex-row position-fixed">
+		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
+		<button onclick="window.location.href = 'more.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
+	</div>
+	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<div class="mt-3 mx-3">
 			<div class="alert alert-secondary shadow" role="alert">平台</div>
 			<div id="ar1" class="d-flex flex-column align-items-start p-2"></div>
@@ -49,6 +34,7 @@
 
 	</div>
 
+	<script src="../js/data.js"></script>
 	<script>datad()</script><!-- 网站列表数据请求 -->
 
 	<!--背景-->
