--- a/index/develop.html
+++ b/index/develop.html
@@ -6,22 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
-	<script type="text/javascript" src="../js/data.js"></script>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 
 <body>
-
-	<div class="z-2 d-flex flex-column mx-auto">
-		<div class="d-flex flex-row">
-			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
-			<button onclick="window.location.href = 'more.html'" type="button" class="btn btn-info shadow mt-3 mr-3" style="width: 100px;"><strong>More</strong></button>
-			<button onclick="window.location.href = '../cpanel'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>控制台</strong></button>
-			<button onclick="window.location.href = '../ftp'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>FTP</strong></button>
-			<button onclick="window.location.href = '../demo20230424.rar'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>ZIP</strong></button>
-		</div>
+	<div class="z-3 d-flex flex-row position-fixed">
+		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
+		<button onclick="window.location.href = 'more.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
+		<button onclick="window.location.href = '../cpanel'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>控制台</strong></button>
+		<button onclick="window.location.href = '../ftp'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>FTP</strong></button>
+		<button onclick="window.location.href = '../demo20230424.rar'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>ZIP</strong></button>
+	</div>
+	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<div class="mt-3 mx-3">
 			<div id="state2" class="alert alert-danger" style="display: block;" role="alert">
 				<strong>离线版本的请定期检查更新 ！！！--> </strong>
@@ -33,8 +31,15 @@
 				<hr class="my-2">
 				<h5 class="alert-heading">网站数据_v0.6_20231025</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.6.0<span class="badge badge-danger">New</span></h4>
-				<h5 class="float-end">2023-10-25</h5>
+				<h4 class="alert-heading">BETA 3.6.1<span class="badge badge-danger">New</span></h4>
+				<h5 class="float-end">2023-11-07</h5>
+				<p>1：优化more跳转栏样式，跳转栏黏顶优化</p>
+				<p>2：首页搜索logo联动更换</p>
+				<p>3：优化more的搜索样式</p>
+				<p>4：初步本地化列表数据</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.6.0</h5>
+				<h6 class="float-end">2023-10-25</h6>
 				<p>1：更改aa的跳转方式，集成在搜索框</p>
 				<p>2：增加more的搜索框指向缓存为localStorage</p>
 				<p>3：优化more的搜索样式</p>
@@ -155,7 +160,8 @@
 		</div>
 
 	</div>
-	
+
+	<script src="../js/data.js"></script>
 	<script>datade()</script><!-- 网站列表数据请求 -->
 
 	<!--背景-->
