--- a/index/more.html
+++ b/index/more.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
-	<script type="text/javascript" src="../js/data.js"></script>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 
 <body>
+	<div class="z-3 d-flex flex-row position-fixed">
+		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
+		<button onclick="window.location.href = 'dd.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>DD</strong></button>
+		<form class="more-tag d-flex mx-3" role="search">
+			<input id="txt" class="form-control shadow me-2" type="search" placeholder="Search" aria-label="Search">
+			<button id="btn" class="btn btn-outline-success shadow" type="button">Search</button>
+		</form>
+		<button id="more-s" class="more-tag btn btn-info dropdown-toggle shadow" type="button">•••</button>
+		<button id="more-c" class="more-tag btn btn-info shadow mx-2" type="button">清空</button>
+		<button id="more-l" class="more-tag btn btn-info shadow" type="button">本地库</button>
+	</div>
 
-	<div class="z-2 d-flex flex-column mx-auto">
-		<div class="d-flex flex-row">
-			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
-			<button onclick="window.location.href = 'dd.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>DD</strong></button>
-			<form class="more-tag d-flex mx-3" role="search">
-				<input id="txt" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-				<button id="btn" class="btn btn-outline-success" type="button">Search</button>
-			</form>
-			<div class="btn-group">
-				<button id="more-s" class="more-tag btn btn-info dropdown-toggle" type="button">•••</button>
-				
-			</div>
-		</div>
+	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
+
 		<div class="d-flex flex-column">
 			<div class="mt-3 mx-3" id="more-b" style="display: none;">
-				<button onclick="a(0)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.1.</h6></button>
-				<button onclick="a(1)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.2.</h6></button>
-				<button onclick="a(2)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="t1">Baidu</h6></button>
-				<button onclick="a(3)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">BiliBili</h6></button>
-				<button onclick="a(4)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">Bing</h6></button>
-				<button onclick="a(5)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">Google.hk</h6></button>
-				<button onclick="a(6)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="t1">Yandex</h6></button>
-				<button onclick="a(7)" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="t1">快递100</h6></button>
+				<button onclick="a(0)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.1.</h6></button>
+				<button onclick="a(1)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.2.</h6></button>
+				<button onclick="a(2)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="t1">Baidu</h6></button>
+				<button onclick="a(3)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">BiliBili</h6></button>
+				<button onclick="a(4)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">Bing</h6></button>
+				<button onclick="a(5)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">Google.hk</h6></button>
+				<button onclick="a(6)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="t1">Yandex</h6></button>
+				<button onclick="a(7)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="t1">快递100</h6></button>
 			</div>
 		</div>
-
 
 		<!-- 头部导航栏 -->
 		<div class="d-flex flex-column" id="ff"></div>
@@ -61,6 +60,7 @@
 
 	</div>
 
+	<script src="../js/data.js"></script>
 	<script>data()</script><!-- 网站列表数据请求 -->
 
 	<!--背景-->
