--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,45 +16,51 @@
 
 <body style="overflow-y: hidden">
 
-	<div class="z-2 d-flex flex-column justify-content-center mx-auto">
-		<div class=" mt-5 pt-5 d-none d-sm-block"></div>
-		<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1"></div>
-		
-		<div class="mx-auto mt-5 pt-5">
-			<!--搜索框-->
-			<form onsubmit="submitFn(this, event);">
-				<div class="search-wrapper">
-					<div class="input-holder">
-						<input type="text" id="txt" class="search-input" placeholder="Type to search" onkeyup="searchToggle(this, event);"/>
-						<button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
+	<div class="z-2 d-flex flex-column mx-auto">
+
+		<div class="d-flex flex-column justify-content-end" style="height: 40%;">
+
+			<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1"></div>
+
+			<div class="mx-auto mt-5 pt-5">
+				<!--搜索框-->
+				<form onsubmit="submitFn(this, event);">
+					<div class="search-wrapper">
+						<div class="input-holder">
+							<input type="text" id="txt" class="search-input" placeholder="Type to search" onkeyup="searchToggle(this, event);" />
+							<button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
+						</div>
+						<span class="close" onclick="searchToggle(this, event);"></span>
+						<div class="result-container"></div>
 					</div>
-					<span class="close" onclick="searchToggle(this, event);"></span>
-					<div class="result-container"></div>
-				</div>
-				<div id="search_ajx">
-					<ul id="list" style="display:none;"></ul>
-				</div>
-			</form>
+					<div id="search_ajx">
+						<ul id="list" style="display:none;"></ul>
+					</div>
+				</form>
 
-			<script type="text/javascript" src="js/search_ajx.js"></script>
+				<script type="text/javascript" src="js/search_ajx.js"></script>
 
-			<!--搜索框-->
+				<!--搜索框-->
+			</div>
+
 		</div>
 
-		<nav class="p-2 mx-auto mt-5 pt-5">
-			<div class="nav nav-tabs shadow rounded-2">
-				<a class="nav-link btn nav-top active">Home</a>
-				<a class="nav-link btn nav-top">Tools</a>
-				<a class="nav-link btn nav-top">Tools NEW</a>
-				<a class="nav-link btn nav-top">Network</a>
-				<a class="nav-link btn nav-top" href="index/more.html">...</a>
+		<div class="d-flex flex-column" style="height: 60%;">
+			<nav class="p-2 mx-auto mt-5 pt-5">
+				<div class="nav nav-tabs shadow rounded-2">
+					<a class="nav-link btn nav-top active">Home</a>
+					<a class="nav-link btn nav-top">Tools</a>
+					<a class="nav-link btn nav-top">Tools NEW</a>
+					<a class="nav-link btn nav-top">Network</a>
+					<a class="nav-link btn nav-top" href="index/more.html">...</a>
+				</div>
+			</nav>
+			<div class="kuaijie mx-auto mt-3">
+				<div class="nav-ban" style="display: block;"><div id="ar1" class="row row-cols-4 p-2"></div></div>
+				<div class="nav-ban" style="display: none;"><div id="ar2" class="row row-cols-4 p-2"></div></div>
+				<div class="nav-ban" style="display: none;"><div id="ar3" class="row row-cols-4 p-2"></div></div>
+				<div class="nav-ban" style="display: none;"><div id="ar4" class="row row-cols-4 p-2"></div></div>
 			</div>
-		</nav>
-		<div class="kuaijie mx-auto mt-3">
-			<div class="nav-ban" style="display: block;"><div id="ar1" class="row row-cols-4 p-2"></div></div>
-			<div class="nav-ban" style="display: none;"><div id="ar2" class="row row-cols-4 p-2"></div></div>
-			<div class="nav-ban" style="display: none;"><div id="ar3" class="row row-cols-4 p-2"></div></div>
-			<div class="nav-ban" style="display: none;"><div id="ar4" class="row row-cols-4 p-2"></div></div>
 		</div>
 
 		<div class="fixed-bottom mx-1">
@@ -62,7 +69,10 @@
 					<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 				</div>
 				<div class="float-end">
-					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:error</a></span>
+					<span class="badge text-black-50">
+						<a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • 
+						<a id="uptime1" href="index/develop.html">Beta:error</a>
+					</span>
 					<span id="state1" class="badge text-bg-success">Error</span>
 					<a><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 				</div>
