--- a/index/develop.html
+++ b/index/develop.html
@@ -37,6 +37,7 @@
 				<p>2：首页搜索logo联动更换</p>
 				<p>3：优化more的搜索样式</p>
 				<p>4：初步本地化列表数据</p>
+				<p>5：固定首页晃动的选项</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.6.0</h5>
 				<h6 class="float-end">2023-10-25</h6>
