--- a/index/develop.html
+++ b/index/develop.html
@@ -25,7 +25,7 @@
 				<strong>离线版本的请定期检查更新 ！！！--> </strong>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
-				<h5 class="alert-heading">BOOSTRAP_v5.3.0-alpha3</h5>
+				<h5 class="alert-heading">BOOSTRAP_v5.3.2</h5>
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
