--- a/index/more.html
+++ b/index/more.html
@@ -21,8 +21,8 @@
 			<button id="btn" class="btn btn-outline-success shadow" type="button">Search</button>
 		</form>
 		<button id="more-s" class="more-tag btn btn-info dropdown-toggle shadow" type="button">•••</button>
-		<button id="more-c" class="more-tag btn btn-info shadow mx-2" type="button">清空</button>
-		<button id="more-l" class="more-tag btn btn-info shadow" type="button">本地库</button>
+		<button id="more-c" class="more-tag btn btn-info shadow mx-2 oh" type="button">清空</button>
+		<button id="more-l" class="more-tag btn btn-info shadow oh" type="button">本地库</button>
 	</div>
 
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
