--- a/index/more.html
+++ b/index/more.html
@@ -17,7 +17,7 @@
 		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
 		<button onclick="window.location.href = 'dd.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>DD</strong></button>
 		<form class="more-tag d-flex mx-3" role="search">
-			<input id="txt" class="form-control shadow me-2" type="search" placeholder="Search" aria-label="Search">
+			<input id="txt" class="form-control shadow me-2" type="search" placeholder="Search" aria-label="Search" onkeypress="if(event.keyCode == 13){return false}">
 			<button id="btn" class="btn btn-outline-success shadow" type="button">Search</button>
 		</form>
 		<button id="more-s" class="more-tag btn btn-info dropdown-toggle shadow" type="button">•••</button>
@@ -29,14 +29,15 @@
 
 		<div class="d-flex flex-column">
 			<div class="mt-3 mx-3" id="more-b" style="display: none;">
-				<button onclick="a(0)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.1.</h6></button>
-				<button onclick="a(1)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/192.168.1.1.png" loading="lazy"><h6 class="t1">.2.</h6></button>
-				<button onclick="a(2)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="t1">Baidu</h6></button>
-				<button onclick="a(3)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">BiliBili</h6></button>
-				<button onclick="a(4)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">Bing</h6></button>
-				<button onclick="a(5)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">Google.hk</h6></button>
-				<button onclick="a(6)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="t1">Yandex</h6></button>
-				<button onclick="a(7)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="t1">快递100</h6></button>
+				<button onclick="a(0)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">1.</h6></button>
+				<button onclick="a(1)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">2.</h6></button>
+				<button onclick="a(2)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">192168.</h6></button>
+				<button onclick="a(3)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="t1">Baidu</h6></button>
+				<button onclick="a(4)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">BiliBili</h6></button>
+				<button onclick="a(5)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">Bing</h6></button>
+				<button onclick="a(6)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">Google.hk</h6></button>
+				<button onclick="a(7)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="t1">Yandex</h6></button>
+				<button onclick="a(8)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="t1">快递100</h6></button>
 			</div>
 		</div>
 
