--- a/index/develop.html
+++ b/index/develop.html
@@ -31,8 +31,14 @@
 				<hr class="my-2">
 				<h5 class="alert-heading">网站数据_v0.6_20231025</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.6.1<span class="badge badge-danger">New</span></h4>
-				<h5 class="float-end">2023-11-07</h5>
+				<h4 class="alert-heading">BETA 3.6.2<span class="badge badge-danger">New</span></h4>
+				<h5 class="float-end">2023-12-14</h5>
+				<p>1：优化more搜索算法</p>
+				<p>2：优化图片体积</p>
+				<p>3：新增mm页面</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.6.1</h5>
+				<h6 class="float-end">2023-11-07</h6>
 				<p>1：优化more跳转栏样式，跳转栏黏顶优化</p>
 				<p>2：首页搜索logo联动更换</p>
 				<p>3：优化more的搜索样式</p>
@@ -181,10 +187,6 @@
 			$(this).attr('src', '../img/index.png');  // 替换为默认图片
 		});
 	</script>
-	
-	<div id="uptime2" style="display: none;">20231018</div>
-
-	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 			
 	<script src="../js/foot.js"></script>
 
