--- a/index/more.html
+++ b/index/more.html
@@ -22,7 +22,7 @@
 		</form>
 		<button id="more-s" class="more-tag btn btn-info dropdown-toggle shadow" type="button">•••</button>
 		<button id="more-c" class="more-tag btn btn-info shadow mx-2 oh" type="button">清空</button>
-		<button id="more-l" class="more-tag btn btn-info shadow oh" type="button">本地库</button>
+		<button id="more-mm" class="more-tag btn btn-info shadow oh" style="display: none;" onclick="window.location.href = 'mm.htm'" type="button">M-M</button>
 	</div>
 
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
@@ -81,10 +81,6 @@
 	</script>
 
 	<!--背景-->
-
-	<div id="uptime2" style="display: none;">20231018</div><!-- 最后更新时间 -->
-
-	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 
 	<script src="../js/foot.js"></script>
 	<script src="../js/foot_more.js"></script>
