--- a/index/mm.htm
+++ b/index/mm.htm
@@ -1,4 +1,5 @@
 <p>恩山论坛：经典：小大数字</p>
-<p>163：经典：小@数字</p>
-<p>GitHub：错位小数字</p>
+<p>163：经典：错位小@数字</p>
+<p>GitHub：邮箱：错位小数字</p>
 <p>qq:9:小@数字</p>
+<p>iconfont:微信:小@数字</p>
