--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 
 <body style="overflow-y: hidden">
+	<div class="z-5 oh">
+		<div id="tc" class="tc"><img src="img/tc.png"></div>
+	</div>
 
 	<div class="z-2 d-flex flex-column mx-auto">
 
@@ -98,8 +101,6 @@
 	
 	<script src="js/foot.js"></script>
 	<script src="js/foot_index.js"></script>
-
-	<script src="file:///C:/demo/js/ddd.js"></script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
 
