--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<a class="nav-link btn nav-top">Tools</a>
 					<a class="nav-link btn nav-top">Tools NEW</a>
 					<a class="nav-link btn nav-top">Network</a>
-					<a class="nav-link btn nav-top" href="index/more.html">...</a>
+					<a class="nav-link btn nav-top" href="index/More.html">...</a>
 				</div>
 			</nav>
 			<div class="kuaijie mx-auto mt-3">
