--- a/index/Develop.html
+++ b/index/Develop.html
@@ -17,7 +17,7 @@
 		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
 		<button onclick="window.location.href = '../cpanel'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>控制台</strong></button>
 		<button onclick="window.location.href = '../ftp'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>FTP</strong></button>
-		<button onclick="window.location.href = '../demo20230424.rar'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>ZIP</strong></button>
+		<button onclick="window.location.href = '../demo.rar'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>ZIP</strong></button>
 	</div>
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<div class="mt-3 mx-3">
