--- a/index/Download.html
+++ b/index/Download.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="z-3 d-flex flex-row position-fixed">
 		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
-		<button onclick="window.location.href = 'more.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
+		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
 	</div>
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 
@@ -23,7 +23,7 @@
 		<div class="fixed-bottom mx-1">
 			<div class=" container-fluid">
 				<div class="float-end">
-					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/Develop.html">Beta:error</a></span>
+					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="Develop.html">Beta:error</a></span>
 					<span id="state1" class="badge text-bg-success">Error</span>
 					<a><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 				</div>
