--- a/index/Develop.html
+++ b/index/Develop.html
@@ -31,8 +31,13 @@
 				<hr class="my-2">
 				<h5 class="alert-heading">网站数据_v1.0_20240111</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.7<span class="badge badge-danger">New</span></h4>
-				<h5 class="float-end">2024-1-11</h5>
+				<h4 class="alert-heading">BETA 3.7.1<span class="badge badge-danger">New</span></h4>
+				<h5 class="float-end">2024-02-27</h5>
+				<p>1：使用Sass优化css</p>
+				<p>2：优化链接顺序</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.7</h5>
+				<h6 class="float-end">2024-1-11</h6>
 				<p>1：大体积图片外链化</p>
 				<p>2：优化logo图片体积</p>
 				<p>3：新增Download页面</p>
