--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 					<a class="nav-link btn nav-top active">Home</a>
 					<a class="nav-link btn nav-top">Tools</a>
 					<a class="nav-link btn nav-top">Tools NEW</a>
+					<a class="nav-link btn nav-top">Work</a>
 					<a class="nav-link btn nav-top">Network</a>
 					<a class="nav-link btn nav-top" href="index/More.html">...</a>
 				</div>
@@ -63,6 +64,7 @@
 				<div class="nav-ban" style="display: none;"><div id="ar2" class="row row-cols-4 p-2"></div></div>
 				<div class="nav-ban" style="display: none;"><div id="ar3" class="row row-cols-4 p-2"></div></div>
 				<div class="nav-ban" style="display: none;"><div id="ar4" class="row row-cols-4 p-2"></div></div>
+				<div class="nav-ban" style="display: none;"><div id="ar5" class="row row-cols-4 p-2"></div></div>
 			</div>
 		</div>
 
