--- a/index/Develop.html
+++ b/index/Develop.html
@@ -17,7 +17,7 @@
 		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
 		<button onclick="window.location.href = '../cpanel'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>控制台</strong></button>
 		<button onclick="window.location.href = '../ftp'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>FTP</strong></button>
-		<button onclick="window.location.href = '../demo.rar'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>ZIP</strong></button>
+		<button onclick="window.location.href = '../demo.zip'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>ZIP</strong></button>
 	</div>
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<div class="mt-3 mx-3">
@@ -25,11 +25,11 @@
 				<strong>离线版本的请定期检查更新 !!! </strong>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
-				<h5 class="alert-heading">BOOSTRAP_v5.3.2</h5>
+				<h5 class="alert-heading">BOOSTRAP_v5.3.0-alpha3</h5>
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
-				<h5 class="alert-heading">网站数据_v1.0_20240111</h5>
+				<h5 class="alert-heading">网站数据_v1.0_20250901</h5>
 				<hr class="my-2">
 				<!-- 版本信息将由JavaScript动态加载到这里 -->
 				<div id="version-history"></div>
