--- a/index/MM.htm
+++ b/index/MM.htm
@@ -1,14 +1,15 @@
+<a href="../index/MM-generator.html" class="baidu-button">MM-generator</a>
 <p>工作邮箱：fan@kodai-industries.com</p>
 <p>恩山论坛：经典：大经典</p>
 <p>163：经典：错位小@数字</p>
 <p>GitHub：邮箱：错位小数字</p>
-<p>qq:9:小@数字</p>
-<p>iconfont:微信:小@数字</p>
-<p>城通网盘:邮箱:经典</p>
-<p>微软:邮箱:错位小数字</p>
-<p>火绒:经典:经典</p>
-<p>shopify:邮箱:大经典</p>
-<p>Google:邮箱:错位小数字</p>
-<p>Wix:工作邮箱:经典</p>
-<p>pb:support工作邮箱:工经典</p>
-<p>steam:邮箱:经典小大@数字</p>
+<p>qq：9：小@数字</p>
+<p>iconfont：微信：小@数字</p>
+<p>城通网盘：邮箱：经典</p>
+<p>微软：邮箱：错位小数字</p>
+<p>火绒：经典：经典</p>
+<p>shopify：邮箱：大经典</p>
+<p>Google：邮箱：错位小数字</p>
+<p>Wix：工作邮箱：经典</p>
+<p>pb：support工作邮箱：工经典</p>
+<p>steam：邮箱：经典小大@数字</p>
