--- a/index/MM.htm
+++ b/index/MM.htm
@@ -1,3 +1,4 @@
+<a href="../index/MM-generator.html" class="baidu-button">-->>MM-generator</a>
 <p>工作邮箱：fan@kodai-industries.com</p>
 <p>恩山论坛：经典：大经典</p>
 <p>163：经典：错位小@数字</p>
