--- a/test/index/More.html
+++ b/test/index/More.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan - More</title>
-	<link rel="Shortcut icon" href="favicon.ico" loading="lazy">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/index.css" />
+	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 <body>
 	<div class="z-3 d-flex flex-row position-fixed">
@@ -53,7 +53,7 @@
 	</div>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
-			fetch('nav-data.json')
+			fetch('../js/nav-data.json')
 				.then(response => response.json())
 				.then(data => {
 					renderNavigation(data['more-ai']);
@@ -87,18 +87,18 @@
 	<div class="z-1">
 		<div class="z-4">
 			<div id="jsi-flying-fish-container" class="w-100"></div>
-			<script src="js/fish.js"></script>
+			<script src="../js/fish.js"></script>
 		</div>
 		<canvas class="background"></canvas>
 	</div>
-	<script src="js/particles.min.js"></script>
+	<script src="../js/particles.min.js"></script>
 	<script>
 		$('img').on("error", function () {
 			$(this).attr('src', 'img/index.png');
 		});
 	</script>
-	<script src="js/foot.js"></script>
-	<script src="js/foot_more.js"></script>
+	<script src="../js/foot.js"></script>
+	<script src="../js/foot_more.js"></script>
 	<script>
 		function handleKeyPress(event) {
 			if (event.keyCode === 13) {
