--- a/test/index/More.html
+++ b/test/index/More.html
@@ -25,9 +25,9 @@
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<div class="d-flex flex-column">
 			<div class="mt-3 mx-3" id="more-b" style="display: none;">
-				<button onclick="a(0)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="img/luyou.png" loading="lazy"><h6 class="t1">1.</h6></button>
-				<button onclick="a(1)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="img/luyou.png" loading="lazy"><h6 class="t1">2.</h6></button>
-				<button onclick="a(2)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="img/luyou.png" loading="lazy"><h6 class="t1">192168.</h6></button>
+				<button onclick="a(0)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">1.</h6></button>
+				<button onclick="a(1)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">2.</h6></button>
+				<button onclick="a(2)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">192168.</h6></button>
 				<button onclick="a(3)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="t1">Baidu</h6></button>
 				<button onclick="a(4)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">Bing</h6></button>
 				<button onclick="a(5)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">Google.hk</h6></button>
