--- a/test/index.html
+++ b/test/index.html
@@ -50,7 +50,9 @@
 		</div>
 		<div class="d-flex flex-column" style="height: 60%;">
 			<nav class="p-2 mx-auto mt-5 pt-5">
-				<div class="nav nav-tabs shadow rounded-2" id="nav-tabs-container"></div>
+				<div class="nav nav-tabs shadow rounded-2" id="nav-tabs-container">
+					<a class="nav-link btn nav-top" href="index/More.html">...</a>
+				</div>
 			</nav>
 			<div class="kuaijie mx-auto mt-3" id="nav-content-container"></div>
 		</div>
