--- a/test/index/More.html
+++ b/test/index/More.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="z-3 d-flex flex-row position-fixed">
-		<button onclick="window.location.href = 'index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
+		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
 		<button onclick="window.location.href = 'DD.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>DD</strong></button>
 		<form class="more-tag d-flex mx-3" role="search">
 			<input id="txt" class="form-control shadow me-2" type="search" placeholder="Search" aria-label="Search" onkeypress="handleKeyPress(event)">
