--- a/test/index.html
+++ b/test/index.html
@@ -51,7 +51,7 @@
 		<div class="d-flex flex-column" style="height: 60%;">
 			<nav class="p-2 mx-auto mt-5 pt-5">
 				<div class="nav nav-tabs shadow rounded-2" id="nav-tabs-container">
-					<a class="nav-link btn nav-top" href="index/More.html">...</a>
+					<!-- More链接将由JavaScript动态添加 -->
 				</div>
 			</nav>
 			<div class="kuaijie mx-auto mt-3" id="nav-content-container"></div>
@@ -86,26 +86,26 @@
 					document.getElementById('nav-tabs-container').innerHTML = '<div class="alert alert-info">暂无导航数据，请先上传JSON文件</div>';
 				});
 		});
+		
 		function renderNavigation(navData) {
 			const navTabsContainer = document.getElementById('nav-tabs-container');
 			const navContentContainer = document.getElementById('nav-content-container');
 			navTabsContainer.innerHTML = '';
 			navContentContainer.innerHTML = '';
+			
+			// 渲染主要标签页
 			navData.tabs.forEach((tab, index) => {
 				const tabElement = document.createElement('a');
 				tabElement.className = `nav-link btn nav-top ${index === 0 ? 'active' : ''}`;
 				tabElement.textContent = tab.name;
 				tabElement.setAttribute('data-tab', tab.name.toLowerCase().replace(/\s+/g, '-'));
-				if (tab.name === 'More' || tab.name === '...') {
-					tabElement.href = 'More.html';
-				} else {
-					tabElement.href = '#';
-					tabElement.addEventListener('click', function(e) {
-						e.preventDefault();
-						switchTab(tab.name.toLowerCase().replace(/\s+/g, '-'));
-					});
-				}
+				tabElement.href = '#';
+				tabElement.addEventListener('click', function(e) {
+					e.preventDefault();
+					switchTab(tab.name.toLowerCase().replace(/\s+/g, '-'));
+				});
 				navTabsContainer.appendChild(tabElement);
+				
 				const contentElement = document.createElement('div');
 				contentElement.className = `nav-ban ${index === 0 ? '' : 'd-none'}`;
 				contentElement.id = `tab-${tab.name.toLowerCase().replace(/\s+/g, '-')}`;
@@ -126,7 +126,15 @@
 				contentElement.appendChild(row);
 				navContentContainer.appendChild(contentElement);
 			});
+			
+			// 在最后添加More链接
+			const moreTabElement = document.createElement('a');
+			moreTabElement.className = 'nav-link btn nav-top';
+			moreTabElement.href = 'index/More.html';
+			moreTabElement.textContent = '...';
+			navTabsContainer.appendChild(moreTabElement);
 		}
+		
 		function switchTab(tabName) {
 			document.querySelectorAll('.nav-ban').forEach(tab => {
 				tab.classList.add('d-none');
