test文件统一，为正式推送做准备

--- a/test/index/More.html
+++ b/test/index/More.html
@@ -94,7 +94,7 @@
 	<script src="../js/particles.min.js"></script>
 	<script>
 		$('img').on("error", function () {
-			$(this).attr('src', 'img/index.png');
+			$(this).attr('src', '../img/index.png');
 		});
 	</script>
 	<script src="../js/foot.js"></script>
