--- a/test/index/More - 加版本管理.html
+++ b/test/index/More - 加版本管理.html
@@ -51,11 +51,9 @@
 			</div>
 		</div>
 		<div class="d-flex flex-column" id="nav-content-container"></div>
-		<div id="aav" class="nav-section" style="display: none;">
-			<h3>小日本ポートエロ</h3>
-			<div class="sites-container" id="special-sites-container">
-				<!-- 特殊栏目的网站将通过JavaScript动态渲染 -->
-			</div>
+		<div class="mt-3 mx-3" id="aav" style="display: none;">
+			<div class="alert alert-secondary shadow" role="alert">小日本ポートエロ</div>
+			<div id="ar21" class="d-flex flex-wrap p-2"></div>
 		</div>
 		<div class="fixed-bottom mx-1">
 			<div class=" container-fluid">
