--- a/test/index/More.html
+++ b/test/index/More.html
@@ -73,9 +73,8 @@
 				.then(response => response.json())
 				.then(data => {
 					renderNavigation(data['more']);
+					renderSpecialSection(data['more']);
 					loadVersionInfo(data);
-					// 加载特殊栏目数据
-					loadSpecialSection(data['more']);
 				})
 				.catch(error => {
 					console.error('加载导航数据时出错:', error);
@@ -112,8 +111,8 @@
 			});
 		}
 		
-		// 加载特殊栏目数据
-		function loadSpecialSection(moreData) {
+		// 渲染特殊栏目（页面加载时就渲染，但保持display: none）
+		function renderSpecialSection(moreData) {
 			const specialContainer = document.getElementById('ar21');
 			
 			if (!moreData || !moreData.special || !moreData.special.sites) {
@@ -136,7 +135,7 @@
 				</a>
 			`).join('');
 			
-			console.log('特殊栏目数据加载完成，共加载', specialSites.length, '个网站');
+			console.log('特殊栏目已渲染（隐藏状态），共', specialSites.length, '个网站');
 		}
 		
 		// 版本信息加载函数
